fix: dando gap para form

--- a/app/login/page.module.css
+++ b/app/login/page.module.css
@@ -43,6 +43,7 @@
     justify-content: space-between;
     width: 50%;
     height: 30%;
+    gap: 2vh;
 }
   
 .form input {
@@ -65,7 +66,7 @@
 .label div {
     display: flex;
 }
-  
+
 .checkmark {
     position: relative;
     width: 1.2em;
